fixed social media icon centering (letter-spacing: 2rem)

--- a/less/index.less
+++ b/less/index.less
@@ -9,18 +9,28 @@
 
 header {
     background-color: @headerColor;
-    display: flex;
-    justify-content: center;
-    padding: 4rem;
+    // display: flex;
+    // justify-content: center;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 
     div {
         display: flex;
         flex-direction: column;
         width: 100%;
         align-items: center;
+        text-align: center;
+
+        h1 {
+            width: 90%;
+        }
 
         .social {
-            letter-spacing: 2rem;
+            font-size: 1.25rem;
+            width: 50%;
+            margin-top: 1rem;
+            display: flex;
+            justify-content: space-evenly;
 
             a {
                 text-decoration: none;
@@ -44,7 +54,7 @@ header {
     } // p
 } // header
 
-section {
+.frontend, .backend, .interests {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,7 +73,7 @@ section {
             border-radius: 50%;
         } // img
     } // .pictureFrame
-} // section
+} // .frontend, .backend, .interests
 
 .frontend {
     background-color: @frontEndColor;
